--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -5,15 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-nav{
-  display:block;
-  padding: 8px;
-  background-color: #dddddd;
-}
-li {
-  display: inline;
+  color: white;
 }
 
 code {
