--- a/src/assets/footer/footer.css
+++ b/src/assets/footer/footer.css
@@ -1,12 +1,50 @@
-.Footer{
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100&family=Roboto:wght@100&display=swap');
+.footer{
+    background-color: #161616;
     display: flex;
+    border: 1px solid white;
+    height: auto;
+    font-family: 'poppins', sans-serif !important;
     flex-direction: row;
-    justify-content: space-evenly;
-    border: 0px solid black ;
-    /* margin: 10px; */
-    /* padding: 10px; */
+    z-index: 2;
     position: relative;
-    overflow: hidden;
-    background-color: black;
-    z-index: 1;
+    border: 1px solid #8d7c60;
+    box-shadow: 0 8px 20px 0 #383126;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 0.5rem 1rem;
+    border-radius: 1.5rem;
+}
+#Closing{
+    font-family: 'Roboto', sans-serif;
+}
+.footer{
+    height: auto;
+    position: relative;
+}
+#ted-logo{
+    padding-top: 2rem;
+    padding-bottom: 1rem;
+    display: flex;
+    width: 150px;
+    align-items: center;
+    position: relative;
+}
+.copy-right{
+    display: flex;
+    /* width: 30%; */
+    font-family: 'Raleway', sans-serif;
+}
+.Test{
+    color:#383126;
+}
+#Social-Branding{
+    align-items: center;
+    position: relative;
+}
+#Social-Branding{
+    gap: 1rem;
+    flex-direction: row;
+    justify-content: center;
+    display: flex;
 }
