--- a/src/pagescss/Homepage.css
+++ b/src/pagescss/Homepage.css
@@ -4,3 +4,11 @@
     flex-direction:column;
     justify-content:space-between;
 }
+
+.component{
+    transition: transform 0.2s ease-in-out;
+}
+
+.component:hover{
+    transform: scale(1.1);
+}
